hasqd/tests/coptest/system/pos/011.inp

print tcp self [ f /_md5/./ ]
print tcp self [ f /_md5/../ ]
print tcp self [ f /_md5/../../../ ]
print tcp self [ f /_md5\92.\92 ]
print tcp self [ f /_md5\92..\92 ]

quit

